fetch request and retrieve the data, and append city to search history

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2>Search for a City:</h2>
                 <input type = "search" id = "search-bar" placeholder="Enter a City" size = "auto">
                 <button type = "submit" id = "search-button">Search</button>
-                <div class = "search-history"></div>
+                <div class = "search-history"><ul></ul></div>
             </aside>
             <main class = "main col-8">
                 <div class = "current-day">
