append the rest of the information needed (temp,humidity,uv Index,etc.), create separate functions to clean up code, and commence working on fetch for 5 day forecast

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             <main class = "main col-8">
                 <div class = "current-day">
                     <h2>Current Day Forecast</h2>
-                    <div class = "info"></div>
+                    <div class = "info"><ul id = "current-day-info"></ul></div>
                 </div>
                 <div class = "5-day-forecast">
                     <h2>Next 5-Day Forecast</h2>
+                    <div class = "info"></div>
                 </div>
             </main>
         </div>
