--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <main class = "main col-8">
                 <div class = "current-day">
                     <h2>Current Day Forecast</h2>
-                    <div class = "info"><ul id = "current-day-info"></ul></div>
+                    <!-- <div class = "info"><ul id = "current-day-info"></ul></div> -->
                 </div>
                 <div class = "5-day-forecast">
                     <h2>Next 5-Day Forecast</h2>
