dynamically create 5 day forecast layout

--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
             </aside>
             <main class = "main col-8">
                 <div class = "current-day">
-                    <h2>Current Day Forecast</h2>
+                    <!-- the below is being dynamically created in js -->
+                    <!-- <h2>Current Day Forecast</h2> -->
                     <!-- <div class = "info"><ul id = "current-day-info"></ul></div> -->
                 </div>
                 <div class = "5-day-forecast">
-                    <h2>Next 5-Day Forecast</h2>
-                    <div class = "info"></div>
+                    <!-- <h2>Next 5-Day Forecast</h2> -->
+                    <!-- <div class = "row info">
+                        <div id = "day-1" class = "col-2">info</div>
+                        <div id = "day-2" class = "col-2">info</div>
+                        <div id = "day-3" class = "col-2">info</div>
+                        <div id = "day-4" class = "col-2">info</div>
+                        <div id = "day-5" class = "col-2">info</div>   
+                    </div> -->
                 </div>
             </main>
         </div>
