made functions to create forecast elements dynamically, added css styling, created for loop for each day of the forecast, appended info for each day, and edited clear function

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
                 <div class = "search-history"><ul></ul></div>
             </aside>
             <main class = "main col-8">
-                <div class = "current-day">
+                <div class = "current-day" id = "current">
                     <!-- the below is being dynamically created in js -->
                     <!-- <h2>Current Day Forecast</h2> -->
                     <!-- <div class = "info"><ul id = "current-day-info"></ul></div> -->
                 </div>
-                <div class = "5-day-forecast">
+                <div class = "w-100 5-day-forecast" id="forecast">
+                    <!-- the below is being dynamically created in js -->
                     <!-- <h2>Next 5-Day Forecast</h2> -->
                     <!-- <div class = "row info">
                         <div id = "day-1" class = "col-2">info</div>
